...
    val expandDependencies = rememberSaveable { mutableStateOf(true) }
    val expandLicenses = rememberSaveable { mutableStateOf(true) }

    LazyVerticalGrid(
        modifier = Modifier
            .background(AboutThisAppTheme.colours.background)
            .testTag("Screen")
            .fillMaxSize(),
        contentPadding = contentPadding,
        columns = GridCells.Fixed(links.size.coerceIn(1, linksMaximumColumns)),
        content = {
            item(key = "header", span = { GridItemSpan(maxLineSpan) }) {
                Column(Modifier.fillMaxWidth()) {
...
                                imageVector = Icons.Outlined.ArrowBack,
                                contentDescription = stringResource(AboutThisAppTheme.strings.accessibilityBack),
                                tint = AboutThisAppTheme.colours.onBackground
                            )
                        }
                    }
                    Header(
                        appIcon = appIcon,
                        appName = appName,
                        contactEmail = contactEmail
                    )
                }
            }
...
