...
                            },
                            isCompact = windowSizeClass.widthSizeClass == WindowWidthSizeClass.Compact,
                            header = {
                                Header(configuration = config)
                            },
                            footer = {
                                Footer(configuration = config)
                            },
                            contactEmail = config.email,
                            appVersion = config.appVersion,
                            links = buildLinks(config),
                            contentPadding = it
                        )
...
